Bug 17985 - babad5b31b systemtap.pass1-4/buildok.exp regressed on el6 compared to systemtap-2.5-5.el6
Summary: babad5b31b systemtap.pass1-4/buildok.exp regressed on el6 compared to systemt...
Status: RESOLVED FIXED
Alias: None
Product: systemtap
Classification: Unclassified
Component: runtime (show other bugs)
Version: unspecified
: P2 normal
Target Milestone: ---
Assignee: Unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-16 16:39 UTC by Martin Cermak
Modified: 2015-02-16 21:28 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Cermak 2015-02-16 16:39:45 UTC
Well, this is not a "real" regression, since what fails is new subtest netfilter-glob.stp which wasn't there in 2.5-5.el6.

 6.7 S i686 # stap -up4 -e 'probe netfilter.** {next}'
cc1: warnings being treated as errors
/tmp/stappF3ryq/stap_e3d6183624e3f7d07097d952ff49f9f5_281081_src.c: In function ‘function___read4’:
/tmp/stappF3ryq/stap_e3d6183624e3f7d07097d952ff49f9f5_281081_src.c:8676: error: cast to pointer from integer of different size
/tmp/stappF3ryq/stap_e3d6183624e3f7d07097d952ff49f9f5_281081_src.c:8676: error: cast to pointer from integer of different size
/tmp/stappF3ryq/stap_e3d6183624e3f7d07097d952ff49f9f5_281081_src.c:8676: error: cast to pointer from integer of different size
/tmp/stappF3ryq/stap_e3d6183624e3f7d07097d952ff49f9f5_281081_src.c: In function ‘function___read_char’:
/tmp/stappF3ryq/stap_e3d6183624e3f7d07097d952ff49f9f5_281081_src.c:8715: error: cast to pointer from integer of different size
/tmp/stappF3ryq/stap_e3d6183624e3f7d07097d952ff49f9f5_281081_src.c:8715: error: cast to pointer from integer of different size
/tmp/stappF3ryq/stap_e3d6183624e3f7d07097d952ff49f9f5_281081_src.c:8715: error: cast to pointer from integer of different size
make[1]: *** [/tmp/stappF3ryq/stap_e3d6183624e3f7d07097d952ff49f9f5_281081_src.o] Error 1
make: *** [_module_/tmp/stappF3ryq] Error 2
WARNING: kbuild exited with status: 2
Pass 4: compilation failed.  [man error::pass4]
 6.7 S i686 # 
 6.7 S i686 # uname -r
2.6.32-528.el6.i686
Comment 1 Frank Ch. Eigler 2015-02-16 21:28:47 UTC
commit 5eb65d059029