PR17985: fix netfilter tapset & code-generator

The $out parameter was not being initialized, and kernel-int/char-
reading tapset functions were needlessly duplicated.  Now

   # stap -uv -e 'probe netfilter.** {next}' -t

passes with flying colors.