tapset-netfilter.cxx
@@ -313,7 +313,7 @@ netfilter_derived_probe_group::emit_module_decls (systemtap_session& s)
       else
         s.op->newline() << "(void) nf_in;";
       if (np->context_vars.find("__nf_out") != np->context_vars.end())
-        s.op->newline() << c_p + "." + s.up->c_localname("__nf_in") + " = (int64_t)(uintptr_t) nf_out;";
+        s.op->newline() << c_p + "." + s.up->c_localname("__nf_out") + " = (int64_t)(uintptr_t) nf_out;";
       else
         s.op->newline() << "(void) nf_out;";
       if (np->context_vars.find("__nf_verdict") != np->context_vars.end())
